--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
+    "query-string": "^9.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "swiper": "^11.2.8",
