--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "query-string": "^9.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8"
   },
