--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8",
     "yup": "^1.6.1"
